Dashboard imp is in progress

--- a/admin-dashboard/package.json
+++ b/admin-dashboard/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@syncfusion/ej2-react-charts": "^21.2.3",
     "@syncfusion/ej2-react-dropdowns": "^21.2.3",
     "@syncfusion/ej2-react-grids": "^21.2.3",
     "@syncfusion/ej2-react-popups": "^21.2.3",
