emp and cust imp done

--- a/admin-dashboard/package.json
+++ b/admin-dashboard/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@syncfusion/ej2-react-calendars": "^21.2.4",
     "@syncfusion/ej2-react-charts": "^21.2.3",
     "@syncfusion/ej2-react-dropdowns": "^21.2.3",
     "@syncfusion/ej2-react-grids": "^21.2.3",
     "@syncfusion/ej2-react-popups": "^21.2.3",
+    "@syncfusion/ej2-react-schedule": "^21.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
