--- a/admin-dashboard/package.json
+++ b/admin-dashboard/package.json
@@ -14,6 +14,7 @@
     "@syncfusion/ej2-react-charts": "^21.2.3",
     "@syncfusion/ej2-react-dropdowns": "^21.2.3",
     "@syncfusion/ej2-react-grids": "^21.2.3",
+    "@syncfusion/ej2-react-inputs": "^21.2.4",
     "@syncfusion/ej2-react-kanban": "^21.2.3",
     "@syncfusion/ej2-react-popups": "^21.2.3",
     "@syncfusion/ej2-react-richtexteditor": "^21.2.4",
