--- a/react-native/myFirstProj/package.json
+++ b/react-native/myFirstProj/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "react-native-dotenv": "^3.4.9"
   },
   "resolutions": {
